--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ name                     : &name "Hsin-Yuan Huang (Robert)"
 description              : &description "Hsin-Yuan Huang (Robert) Personal homepage"
 url                      : https://hsinyuan-huang.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "hsinyuan-huang/hsinyuan-huang.github.io"
+repository               : "momohuang/momohuang.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
